fix for jdk 8
Convert Map.of -> Collections.singletonMap